# gps-trust-tui

./: CLAUDE.md  Cargo.toml  README.md
docs/adr/: 0001-multi-server-mcp-client-architecture.md
src/: action.rs  app.rs  call.rs  event.rs  main.rs  tui.rs
src/auth/: api_key.rs  mod.rs  oauth.rs  session.rs  token_store.rs
src/mcp/: client.rs  mod.rs  notifications.rs  types.rs
src/ui/: layout.rs  login_view.rs  mod.rs  result_view.rs  status_bar.rs  task_view.rs  tool_browser.rs  tool_form.rs
