[package]
name = "gps-trust-mcp-tui"
version = "0.1.8"
edition = "2024"

[[bin]]
name = "gttui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
turul-mcp-client = "0.3"
turul-mcp-protocol = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", features = ["json", "form"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
dirs = "6.0"
open = "5"
anyhow = "1.0.102"
form_urlencoded = "1.2.2"
toml = "1.0.7"
serde_yml = "0.0.12"
toon-format = "0.4.4"
